CHANGES IN FLTK 1.1.2

	- Fl_Text_Display didn't limit the resize height to 1
	  line.
	- Fl_Scrollbar widgets incorrectly took keyboard focus
	  when clicked on. This caused widgets such as
	  Fl_Text_Display to hide the cursor when you scrolled
	  the text.


CHANGES IN FLTK 1.1.1

	- Fl_Text_Display didn't always show the cursor.
	- Fl_Tabs now only redraws the tabs themselves when
	  making focus changes.  This reduces flicker in tabbed
	  interfaces.
	- The WIN32 redraw handler now correctly merges the FLTK
	  and Windows redraw regions.
	- The Fl_Text_* widgets use the C++ bool type, which is
	  not supported by older C++ compilers.  Added a
	  configure check and workaround code for this.
	- Fl_X::set_xid() didn't initialize the backbuffer_bad
	  element that was used with XDBE.
	- Fl_Shared_Image::uncache() was not implemented.
	- Fl::set_font() didn't 0-initialize all font descriptor
	  data.
	- Some OpenGL implementations don't support single-
	  buffered visuals. The Fl_Gl_Window class now emulates
	  single-buffered windows using double-buffered
	  windows.
	- Added a workaround for a compiler bug in Borland C++
	  that prevented Fl_Help_View.cxx from compiling.
	- Checkmarks didn't scale properly; copied the 2.0 check
	  mark code over.
	- Replaced several memcpy's with memmove's for
	  portability (memmove allows for overlapping copies,
	  memcpy does not)
	- Bug #621737: Fl_Bitmap::copy(), Fl_Pixmap::copy(), and
	  Fl_RGB_Image::copy() now range-check the new width and
	  height to make sure they are positive integers.
	- Bug #621740: the WIN32 port needed to handle WM_MOUSELEAVE events
	  in order to avoid problems with tooltips.
	- Fl_PNM_Image didn't set the "alloc" flag for the data,
	  which could lead to a memory leak.
	- fl_filename_match() was inconsistently doing case-
	  insensitive matching.
	- Fl_Button redraw fix for bug #620979 (focus boxes and
	  check buttons).
	- Fl_Text_Display fix for bug #620633 (crash on
	  redisplay).