@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.2
 
+	- Fl_File_Chooser didn't handle WIN32 home directories
+	  that used backslashes instead of forward slashes.
 	- Fl_Text_Display didn't limit the resize height to 1
 	  line.
 	- Fl_Scrollbar widgets incorrectly took keyboard focus
